# evalisp

./: CMakeLists.txt  Makefile  Makefile.raw  README.md  array.c  eva.c  main.c  pipelisp.c  sxpn.c  sxpn.h
doc/muse/: 20120924.lisp  20190306_pipelisp_examples.lisp  20190307.lisp  20221109.lisp  20221111.lisp  20221212_parse.lisp  20230303_spread.lisp  20230305_dict.lisp
doc/syntax/: sxproto.md
model/: cons.pml  eva.lsp
src/: CMakeLists.txt  main_evalisp.c
src/legacy/: CMakeLists.txt  sxpn.c  sxpn.h
